--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -6,7 +6,7 @@
 %     Minor mods by N. Doren 08/26/11
 
 % Use the following specification for BOTTOM page numbering:
-\documentclass[botnum]{unmeethesis}
+\documentclass[botnum,letterpaper,12pt]{unmeethesis}
                  % OR
 % Use the following specification for TOP page numbering:
 % \documentclass[fleqn]{unmeethesis} % fleqn move all the display equations to the left instead of center.
@@ -65,6 +65,7 @@ Professor Huaiyu Duan}
 
 \mainmatter
 
+% \include{formatting}
 % \setcounter{chapter}{-1}  % start chapter numbering at 0
 \include{chapters/introduction}
 \include{chapters/chapter2}
