--- a/preambles.tex
+++ b/preambles.tex
@@ -54,6 +54,11 @@ sorting=ynt
 %%height=10in,a5paper,hmargin={3cm,0.8in},
 %]{geometry}
 
+
+\usepackage{setspace}
+\doublespacing
+
+
 % \usepackage{amsmath}
 \usepackage{amsmath,thmtools}
 \usepackage{amssymb}
@@ -124,3 +129,8 @@ sorting=ynt
 
 %%%%%%  PREAMBLES %%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%% For printing the unit conversions
+\usepackage{array}
+\usepackage[hmargin=2cm]{geometry}
