--- a/preambles.tex
+++ b/preambles.tex
@@ -131,6 +131,12 @@ sorting=ynt
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-%%%%%%% For printing the unit conversions
-\usepackage{array}
-\usepackage[hmargin=2cm]{geometry}
+%%%%%%%
+\usepackage{geometry}
+ \geometry{
+ letterpaper,
+ left=1.5in,
+ right=1in,
+ top=1in,
+ bottom=1in,
+ }
