update heading style

--- a/phd-thesis-lei-ma.tex
+++ b/phd-thesis-lei-ma.tex
@@ -39,9 +39,9 @@ Professor Huaiyu Duan}
 
 \documenttype{Dissertation}
 
-\previousdegrees{}%Bachelor of Science, Shandong University, 2010}
+\previousdegrees{B.Sc., Physics, Shandong University, 2010}%Bachelor of Science, Shandong University, 2010}
 
-\date{April, \thisyear}
+\date{July, \thisyear}
 
 \maketitle
 
