added huaiyu's revisions

--- a/preambles.tex
+++ b/preambles.tex
@@ -120,7 +120,8 @@ sorting=ynt
 \usepackage{listings}% http://ctan.org/pkg/listings
 \lstset{
   basicstyle=\ttfamily,
-  mathescape
+  mathescape,
+  escapeinside={(*@}{@*)}
 }
 % \usepackage[]{algorithm2e}
 % \usepackage{program}
