update according to Dr. Finley

--- a/references.bib
+++ b/references.bib
@@ -282,7 +282,7 @@ arxivId = {arXiv:1004.2318v3},
 author = {Adelberger, Eg and Garc{\'{\i}}a, a},
 eprint = {arXiv:1004.2318v3},
 file = {:Users/leima/Documents/Mendeley Desktop/Reviews of Modern Physics/Adelberger, Garc{\'{\i}}a - 2011 - Solar fusion cross sections. II. The pp chain and CNO cycles.pdf:pdf},
-journal = {Reviews of Modern {\ldots}},
+journal = {Reviews of Modern Physics},
 mendeley-groups = {Neutrino/neutrino-astrophysics},
 number = {March},
 title = {{Solar fusion cross sections. II. The pp chain and CNO cycles}},
@@ -978,18 +978,27 @@ year = {2014}
 }
 
 
+%@online{Friedland2006,
+%% astro-ph/0607244,
+%Author = {Alexander Friedland and Andrei Gruzinov},
+%Title = {Neutrino signatures of supernova turbulence},
+%Year = {2006},
+%Eprint = {arXiv:astro-ph/0607244},
+%}
 
-@unpublished{Friedland2006,
+@online{Friedland2006,
 abstract = {Convection that develops behind the shock front during the first second of a core-collapse supernova explosion is believed to play a crucial role in the explosion mechanism. We demonstrate that the resulting turbulent density fluctuations may be directly observable in the neutrino signal starting at t{\textgreater}{\~{}} 3-4 s after the onset of the explosion. The effect comes from the modulation of the MSW flavor transformations by the turbulent density fluctuations. We derive a simple and general criterion for neutrino flavor depolarization in a Kolmogorov-type turbulence and apply it to the turbulence seen in modern numerical simulations. The turbulence casts a "shadow", by making other features, such as the shock front, unobservable in the density range covered by the turbulence.},
-archivePrefix = {arXiv},
-arxivId = {astro-ph/0607244},
+archiveprefix = {arXiv},
+arxivid = {astro-ph/0607244},
 author = {Friedland, Alexander and Gruzinov, Andrei},
 eprint = {0607244},
+eprinttype = {arxiv},
+eprintclass = {astro-ph},
 file = {:Users/leima/Documents/Mendeley Desktop/Unknown/Friedland, Gruzinov - 2006 - Neutrino signatures of supernova turbulence.pdf:pdf},
 mendeley-groups = {Neutrino/matter,Neutrino},
 month = jul,
 pages = {1--5},
-primaryClass = {astro-ph},
+primaryclass = {astro-ph},
 title = {{Neutrino signatures of supernova turbulence}},
 url = {http://arxiv.org/abs/astro-ph/0607244},
 year = {2006}
