--- a/references.bib
+++ b/references.bib
@@ -46,14 +46,14 @@ author = {Cowan, C L and Reines, F and Harrison, F B and Kruse, H W and McGuire,
 doi = {10.1126/science.124.3212.103},
 file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Cowan et al/1956 - Science (New York, N.Y.).pdf:pdf},
 issn = {0036-8075},
-journal = {Science (New York, N.Y.)},
+journal = {Science},
 mendeley-groups = {Neutrino/experiment},
 month = {07},
 number = {3212},
 pages = {103--4},
 pmid = {17796274},
 publisher = {American Association for the Advancement of Science},
-title = {{Detection of the Free Neutrino: a Confirmation.}},
+title = {{Detection of the free neutrino: a confirmation.}},
 url = {http://www.ncbi.nlm.nih.gov/pubmed/17796274},
 volume = {124},
 year = {1956}
@@ -106,7 +106,7 @@ keywords = {fluid instabilities,hydrodynamics,neutrinos,neutron stars,supernovae
 mendeley-groups = {Neutrino/supernova},
 number = {1},
 pages = {341--375},
-title = {{Physics of Core-Collapse Supernovae in Three Dimensions: A Sneak Preview}},
+title = {{Physics of core-collapse supernovae in three dimensions: A sneak preview}},
 url = {http://www.annualreviews.org/doi/10.1146/annurev-nucl-102115-044747},
 volume = {66},
 year = {2016}
@@ -191,7 +191,7 @@ year = {2017}
 @article{Pontecorvo1968,
 author = {Pontecorvo, B},
 file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Pontecorvo/1968 - Sov. Phys. JETP.pdf:pdf},
-journal = {Sov. Phys. JETP},
+journal = {Soviet Physics JETP},
 mendeley-groups = {Neutrino},
 number = {5},
 pages = {984--988},
@@ -278,9 +278,9 @@ year = {2004}
 
 @article{Adelberger2011a,
 archivePrefix = {arXiv},
-arxivId = {arXiv:1004.2318v3},
+arxivId = {1004.2318v3},
 author = {Adelberger, Eg and Garc{\'{\i}}a, a},
-eprint = {arXiv:1004.2318v3},
+eprint = {1004.2318v3},
 file = {:Users/leima/Documents/Mendeley Desktop/Reviews of Modern Physics/Adelberger, Garc{\'{\i}}a - 2011 - Solar fusion cross sections. II. The pp chain and CNO cycles.pdf:pdf},
 journal = {Reviews of Modern Physics},
 mendeley-groups = {Neutrino/neutrino-astrophysics},
@@ -312,7 +312,7 @@ year = {1978}
       author         = "Bahcall, John N.",
       title          = "{Shapes of solar neutrino spectra: Unconventional tests
                         of the standard electroweak model}",
-      journal        = "Phys. Rev.",
+      journal        = "Physics Review",
       volume         = "D44",
       year           = "1991",
       pages          = "1644-1651",
@@ -475,10 +475,10 @@ year = {1986}
 
 @article{Patrignani:2016xqp,
       author         = "Patrignani, C. and others",
-      title          = "{Review of Particle Physics}",
+      title          = "{Review of particle physics}",
       collaboration  = "Particle Data Group",
-      journal        = "Chin. Phys.",
-      volume         = "C40",
+      journal        = "Chinese Physics C",
+      volume         = "40",
       year           = "2016",
       number         = "10",
       pages          = "100001",
@@ -532,7 +532,7 @@ mendeley-groups = {Neutrino,Neutrino/astro,Neutrino/supernova},
 month = feb,
 number = {1},
 pages = {106},
-title = {{THE PHYSICS OF THE NEUTRINO MECHANISM OF CORE-COLLAPSE SUPERNOVAE}},
+title = {{The physics of the neutrino mechanism of core-collapse supernovae}},
 url = {http://stacks.iop.org/0004-637X/746/i=1/a=106?key=crossref.86835641aac1fd1f9a4cc23f89772e91},
 volume = {746},
 year = {2012}
@@ -546,7 +546,7 @@ year = {2012}
       booktitle      = "{Neutrino physics and astrophysics. Proceedings, 20th
                         International Conference, Neutrino 2002, Munich, Germany,
                         May 25-30, 2002}",
-      journal        = "Nucl. Phys. Proc. Suppl.",
+      journal        = "Nuclear Physics Proceedings Supplements",
       volume         = "118",
       year           = "2003",
       pages          = "49-54",
@@ -561,7 +561,7 @@ year = {2012}
                         C. K. and Wildenhain, Paul S. and Ullman, Jack",
       title          = "{Measurement of the solar electron neutrino flux with the
                         Homestake chlorine detector}",
-      journal        = "Astrophys. J.",
+      journal        = "Astrophysical Journal",
       volume         = "496",
       year           = "1998",
       pages          = "505-526",
@@ -661,7 +661,7 @@ year = {2006}
       author         = "Mikheev, S. P. and Smirnov, A. {\relax Yu}.",
       title          = "{Resonance Amplification of Oscillations in Matter and
                         Spectroscopy of Solar Neutrinos}",
-      journal        = "Sov. J. Nucl. Phys.",
+      journal        = "Soviet Journal of Nuclear Physics",
       volume         = "42",
       year           = "1985",
       pages          = "913-917",
@@ -790,7 +790,7 @@ year = {2000}
       author         = "Patrignani, C. and others",
       title          = "{Review of Particle Physics}",
       collaboration  = "Particle Data Group",
-      journal        = "Chin. Phys.",
+      journal        = "Chinese Physics",
       volume         = "C40",
       year           = "2016",
       number         = "10",
@@ -805,7 +805,7 @@ archivePrefix = {arXiv},
 arxivId = {arXiv:1202.0776v1},
 author = {Kneller, James P. and McLaughlin, Gail C. and Patton, Kelly M.},
 doi = {10.1088/0954-3899/40/5/055002},
-eprint = {arXiv:1202.0776v1},
+eprint = 1202.0776v1},
 file = {:Users/leima/Documents/Mendeley Desktop/Journal of Physics G Nuclear and Particle Physics/Kneller, McLaughlin, Patton - 2013 - Stimulated neutrino transformation with sinusoidal density profiles.pdf:pdf},
 isbn = {9780735411883},
 issn = {0954-3899},
@@ -827,7 +827,7 @@ archivePrefix = {arXiv},
 arxivId = {arXiv:1407.7835v1},
 author = {Patton, Kelly M. and Kneller, James P. and McLaughlin, Gail C.},
 doi = {10.1103/PhysRevD.89.073022},
-eprint = {arXiv:1407.7835v1},
+eprint = {1407.7835v1},
 file = {:Users/leima/Documents/Mendeley Desktop/Physical Review D/Patton, Kneller, McLaughlin - 2014 - Stimulated neutrino transformation through turbulence.pdf:pdf},
 journal = {Physical Review D},
 keywords = {Matter Effect,Stimulated Neutrino Oscillation},
@@ -847,7 +847,7 @@ year = {2014}
                         Gail C.",
       title          = "{Stimulated neutrino transformation through turbulence on
                         a changing density profile and application to supernovae}",
-      journal        = "Phys. Rev.",
+      journal        = "Physical Review",
       volume         = "D91",
       year           = "2015",
       number         = "2",
@@ -952,7 +952,7 @@ mendeley-groups = {Neutrino/astro},
 month = jan,
 number = {1},
 pages = {5},
-title = {{The Role of Turbulence in Neutrino-driven Core-collapse Supernova Explosions}},
+title = {{The role of turbulence in neutrino-driven core-collapse supernova explosions}},
 url = {http://stacks.iop.org/0004-637X/799/i=1/a=5?key=crossref.5b5fcec309f37aef90a609482e70f24d},
 volume = {799},
 year = {2015}
@@ -986,7 +986,7 @@ year = {2014}
 %Eprint = {arXiv:astro-ph/0607244},
 %}
 
-@online{Friedland2006,
+@article{Friedland2006,
 abstract = {Convection that develops behind the shock front during the first second of a core-collapse supernova explosion is believed to play a crucial role in the explosion mechanism. We demonstrate that the resulting turbulent density fluctuations may be directly observable in the neutrino signal starting at t{\textgreater}{\~{}} 3-4 s after the onset of the explosion. The effect comes from the modulation of the MSW flavor transformations by the turbulent density fluctuations. We derive a simple and general criterion for neutrino flavor depolarization in a Kolmogorov-type turbulence and apply it to the turbulence seen in modern numerical simulations. The turbulence casts a "shadow", by making other features, such as the shock front, unobservable in the density range covered by the turbulence.},
 archiveprefix = {arXiv},
 arxivid = {astro-ph/0607244},
@@ -1102,7 +1102,7 @@ doi = {10.1103/PhysRevD.74.105014},
 eprint = {0606616},
 file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Duan et al/2006 - Physical Review D - Particles, Fields, Gravitation and Cosmology.pdf:pdf},
 issn = {15507998},
-journal = {Physical Review D - Particles, Fields, Gravitation and Cosmology},
+journal = {Physical Review D},
 mendeley-groups = {Neutrino,Neutrino/collective},
 pages = {1--22},
 primaryClass = {astro-ph},
@@ -1315,7 +1315,7 @@ journal = {Physical Review Letters},
 mendeley-groups = {Neutrino/collective},
 number = {8},
 pages = {1--5},
-title = {{Neutrino Cloud Instabilities Just above the Neutrino Sphere of a Supernova}},
+title = {{Neutrino cloud instabilities just above the neutrino sphere of a supernova}},
 volume = {116},
 year = {2016}
 }
@@ -1337,7 +1337,7 @@ mendeley-groups = {Neutrino,Neutrino/collective},
 month = nov,
 number = {1},
 pages = {569--594},
-title = {{Collective Neutrino Oscillations}},
+title = {{Collective neutrino oscillations}},
 url = {http://arxiv.org/abs/1001.2799 http://www.annualreviews.org/doi/10.1146/annurev.nucl.012809.104524},
 volume = {60},
 year = {2010}
@@ -1403,7 +1403,7 @@ archivePrefix = {arXiv},
 arxivId = {arXiv:1203.1607v1},
 author = {Cherry, John F. and Carlson, J. and Friedland, Alexander and Fuller, George M. and Vlasenko, Alexey},
 doi = {10.1103/PhysRevLett.108.261104},
-eprint = {arXiv:1203.1607v1},
+eprint = {1203.1607v1},
 file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Cherry et al/2012 - Physical Review Letters.pdf:pdf},
 issn = {00319007},
 journal = {Physical Review Letters},
@@ -1421,10 +1421,10 @@ archivePrefix = {arXiv},
 arxivId = {arXiv:1204.0971v1},
 author = {Sarikas, Srdjan and Tamborra, Irene and Raffelt, Georg and H{\"{u}}depohl, Lorenz and Janka, Hans Thomas},
 doi = {10.1103/PhysRevD.85.113007},
-eprint = {arXiv:1204.0971v1},
+eprint = {1204.0971v1},
 file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Sarikas et al/2012 - Physical Review D - Particles, Fields, Gravitation and Cosmology.pdf:pdf},
 issn = {15507998},
-journal = {Physical Review D - Particles, Fields, Gravitation and Cosmology},
+journal = {Physical Review D},
 mendeley-groups = {Neutrino/collective,Neutrino/halo},
 number = {11},
 pages = {1--5},
@@ -1482,7 +1482,7 @@ year = {2009}
 %month = jan,
 %number = {2},
 %pages = {021101},
-%title = {{Fast Pairwise Conversion of Supernova Neutrinos: A Dispersion Relation Approach}},
+%title = {{Fast pairwise conversion of supernova neutrinos: a dispersion relation approach}},
 %url = {http://arxiv.org/abs/1610.01612 http://link.aps.org/doi/10.1103/PhysRevLett.118.021101},
 %volume = {118},
 %year = {2017}
@@ -1560,7 +1560,7 @@ doi = {10.1103/PhysRevD.78.125015},
 eprint = {0810.1407},
 file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Raffelt/2008 - Physical Review D - Particles, Fields, Gravitation and Cosmology.pdf:pdf},
 issn = {15507998},
-journal = {Physical Review D - Particles, Fields, Gravitation and Cosmology},
+journal = {Physical Review D},
 mendeley-groups = {Neutrino/collective},
 number = {12},
 pages = {1--9},
@@ -1579,7 +1579,7 @@ doi = {10.1103/PhysRevD.74.105010},
 eprint = {0608695},
 file = {:Users/leima/OneDrive - University of New Mexico/Mendeley/Hannestad et al/2006 - Physical Review D - Particles, Fields, Gravitation and Cosmology.pdf:pdf},
 issn = {15507998},
-journal = {Physical Review D - Particles, Fields, Gravitation and Cosmology},
+journal = {Physical Review D},
 mendeley-groups = {Neutrino/collective},
 number = {10},
 pages = {1--21},
